Clean up repository: Remove source files and internal docs
Keep only publication-ready files in root:
- trauma-training-data-essay.pdf (compiled paper)
- README.md, LICENSE, CITATION.cff, VERSION, CHANGELOG.md
- trauma-training-data.bib (bibliography)
- figures/ (publication figures)
- trauma-models/ (computational code)

Removed from tracking:
- LaTeX/Markdown source files (.tex, .md)
- Old duplicate PDF (trauma_paper.pdf)
- Internal documentation (CLAUDE.md, CLEANUP_ACTION_PLAN.md, V1.0_RELEASE_REPORT.md)
- Extra bibliography (trauma_references.bib)

Updated .gitignore to prevent future commits of source files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# LaTeX build artifacts
+# LaTeX source and build artifacts (keep only compiled PDF)
+*.tex
 *.aux
 *.log
 *.out
@@ -6,6 +7,18 @@
 *.bbl
 *.blg
 *.synctex.gz
+
+# Markdown source (keep only compiled PDF)
+trauma-training-data-essay.md
+
+# Internal documentation (not for public)
+CLAUDE.md
+CLEANUP_ACTION_PLAN.md
+V1.0_RELEASE_REPORT.md
+
+# Old/duplicate files
+trauma_paper.pdf
+trauma_references.bib
 
 # System files
 .DS_Store
